--- a/.gitignore
+++ b/.gitignore
@@ -163,4 +163,5 @@ frontend.log
 .Spotlight-V100
 .Trashes
 ehthumbs.db
-Thumbs.db
+Thumbs.dbwebapp/backend/config/youtube_credentials.json
+webapp/backend/config/youtube_token.json
